added dynamic lighting/shadows, HUD system, 3D complex model (satellite), added astroid belt, other controls and improved the camera functions,

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(InteractiveSolarSystem)
 
 set(CMAKE_CXX_STANDARD 11)
 
-# Include subdirectories if you want to organize by folders
+Include subdirectories if you want to organize by folders
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/Camera)
 
